2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* util/deviceiter.c (grub_util_iterate_devices): Skip MD devices,
	which we expect to be handled by upper layers.

2010-07-06  BVK Chaitanya  <bvk.groups@gmail.com>

	* bus/usb/usbhub.c: #include time.h header.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* fs/reiserfs.c (grub_reiserfs_iterate_dir): Zero out first byte of
	entry_name also for entries without stat blocks (e.g. ".."); fixes
	corruption of the first entry in a directory.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/00_header.in: Process GRUB_THEME and GRUB_BACKGROUND
	after setting gfxterm as the active terminal.  GRUB_BACKGROUND
	doesn't work otherwise.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Features): Update list of supported file systems.
	(GNU/Linux): Update for GRUB 2.
	(Serial terminal): Remove mention of --disable-serial, which was a
	GRUB Legacy configure option.  Update instructions to use
	`terminal_input' and `terminal_output' rather than `terminal'.
	(Vendor power-on keys): Copy-edit.  Add cross-references to `Simple
	configuration' and `Installing GRUB using grub-install'.
	(Menu entry editor): Update for GRUB 2.
	(terminfo): Add vt100-color, ieee1275, and dumb terminal types.
	Document new -a, -u, and -v options.
	(initrd): New section.
	(initrd16): New section.
	(linux): New section.
	(linux16): New section.
	(search): The `var' argument to `--set' is optional.
	(GRUB only offers a rescue shell): Go into a little more detail on
	drive ordering.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in: Set LINGUAS to empty if ENABLE_NLS is undefined.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (MAINTAINER_CLEANFILES): Add unicode/UnicodeData.txt,
	unicode/BidiMirroring.txt, unicode/ArabicShaping.txt, and unidata.c.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/i386/pc/grub-setup.c (setup): Rename prefix to