@@ -1,5 +1,12 @@
 2010-07-06  Colin Watson  <cjwatson@ubuntu.com>
 
+	* term/gfxterm.c (repaint_schedulded): Rename to ...
+	(repaint_scheduled): ... this.  Update all callers.
+	(repaint_was_schedulded): Rename to ...
+	(repaint_was_scheduled): ... this.  Update all callers.
+
+2010-07-06  Colin Watson  <cjwatson@ubuntu.com>
+
 	* util/deviceiter.c (grub_util_iterate_devices): Skip MD devices,
 	which we expect to be handled by upper layers.
 
